--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #! /bin/bash
 build_all(){
   echo '==============start build all===================='
-  build_base && build_core && build_tariff && build_openapi && build_mobile
+  build_base && build_core && build_meta && build_coreapi && build_tariff && build_mobile
   echo '==============end build all===================='
 
 }
