--- a/jd_extension/manifest.json
+++ b/jd_extension/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "test",
+    "name": "京东钢镚辅助工具",
     "version": "0.8",
-    "description": "Testing jd card coin API",
+    "description": "京东钢镚辅助工具",
     "permissions": ["cookies", "tabs", "http://*/*", "https://*/*"],
     "icons": { "16": "cookie.png", "48": "cookie.png", "128": "cookie.png" },
     "browser_action": {
